@@ -1,4 +1,6 @@
 For 1.20.8
+	- GeoTransform code added.
+
 	- Some routes on parsing initialization were not getting set.
 
 	- Javascript - added SFVec3d support.
